--- a/public/project/rt_estim/index.html
+++ b/public/project/rt_estim/index.html
@@ -108,9 +108,9 @@
   
   <meta property="twitter:card" content="summary_large_image">
   
-  <meta property="og:site_name" content="Aplicações Shiny - DE/UFPB">
+  <meta property="og:site_name" content="Shiny@DE">
   <meta property="og:url" content="http://shiny.de.ufpb.br/project/rt_estim/">
-  <meta property="og:title" content="Estimação do Número Reprodutivo Efetivo $R_t$ para a epidemia de Covid-19 no Brasil. | Aplicações Shiny - DE/UFPB">
+  <meta property="og:title" content="Estimação do Número Reprodutivo Efetivo $R_t$ para a epidemia de Covid-19 no Brasil. | Shiny@DE">
   <meta property="og:description" content=""><meta property="og:image" content="http://shiny.de.ufpb.br/project/rt_estim/featured.png">
   <meta property="twitter:image" content="http://shiny.de.ufpb.br/project/rt_estim/featured.png"><meta property="og:locale" content="pt-br">
   
@@ -128,7 +128,7 @@
 
 
 
-  <title>Estimação do Número Reprodutivo Efetivo $R_t$ para a epidemia de Covid-19 no Brasil. | Aplicações Shiny - DE/UFPB</title>
+  <title>Estimação do Número Reprodutivo Efetivo $R_t$ para a epidemia de Covid-19 no Brasil. | Shiny@DE</title>
 
 </head>
 
@@ -171,7 +171,7 @@
   <div class="container">
 
     
-      <a class="navbar-brand" href="/">Aplicações Shiny - DE/UFPB</a>
+      <a class="navbar-brand" href="/">Shiny@DE</a>
       
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Alterar navegação"><span><i class="fas fa-bars"></i></span>
       </button>
